--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "cdm-spark-standalone"
 version = "0.1.0"
 description = "CDM Spark Standalone"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = "==3.11.9"
 dependencies = [
     "pyspark==3.5.5",
 ]
