--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,7 +25,7 @@ services:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - DELTALAKE_WAREHOUSE_DIR=s3a://cdm-lake/warehouse
-      - SPARK_EVENT_LOG_DIR=s3a://cdm-spark-events/spark-events
+      - SPARK_JOB_LOG_DIR=s3a://cdm-spark-events/spark-events
       - MINIO_URL=http://minio:9002
       - MINIO_LOG_USER_ACCESS_KEY=minio-log-access
       - MINIO_LOG_USER_SECRET_KEY=minio123
@@ -53,7 +53,7 @@ services:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - DELTALAKE_WAREHOUSE_DIR=s3a://cdm-lake/warehouse
-      - SPARK_EVENT_LOG_DIR=s3a://cdm-spark-events/spark-events
+      - SPARK_JOB_LOG_DIR=s3a://cdm-spark-events/spark-events
       - MINIO_URL=http://minio:9002
       - MINIO_LOG_USER_ACCESS_KEY=minio-log-access
       - MINIO_LOG_USER_SECRET_KEY=minio123
@@ -81,7 +81,7 @@ services:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - DELTALAKE_WAREHOUSE_DIR=s3a://cdm-lake/warehouse
-      - SPARK_EVENT_LOG_DIR=s3a://cdm-spark-events/spark-events
+      - SPARK_JOB_LOG_DIR=s3a://cdm-spark-events/spark-events
       - MINIO_URL=http://minio:9002
       - MINIO_LOG_USER_ACCESS_KEY=minio-log-access
       - MINIO_LOG_USER_SECRET_KEY=minio123
@@ -95,7 +95,7 @@ services:
       - SPARK_MASTER_URL=spark://spark-master:7077
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-      - SPARK_EVENT_LOG_DIR=s3a://cdm-spark-events/spark-events
+      - SPARK_JOB_LOG_DIR=s3a://cdm-spark-events/spark-events
       - MINIO_URL=http://minio:9002
       - MINIO_LOG_USER_ACCESS_KEY=minio-readwrite
       - MINIO_LOG_USER_SECRET_KEY=minio123
