--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,7 @@ services:
       - REDIS_PORT=6379
       - DELTALAKE_WAREHOUSE_DIR=s3a://cdm-lake/warehouse
       - SPARK_JOB_LOG_DIR=s3a://cdm-spark-job-logs/spark-job-logs
+      - SPARK_JOB_LOG_DIR_CATEGORY=master
       - MINIO_URL=http://minio:9002
       - MINIO_LOG_USER_ACCESS_KEY=minio-log-access
       - MINIO_LOG_USER_SECRET_KEY=minio123
@@ -54,6 +55,7 @@ services:
       - REDIS_PORT=6379
       - DELTALAKE_WAREHOUSE_DIR=s3a://cdm-lake/warehouse
       - SPARK_JOB_LOG_DIR=s3a://cdm-spark-job-logs/spark-job-logs
+      - SPARK_JOB_LOG_DIR_CATEGORY=worker-1
       - MINIO_URL=http://minio:9002
       - MINIO_LOG_USER_ACCESS_KEY=minio-log-access
       - MINIO_LOG_USER_SECRET_KEY=minio123
@@ -82,6 +84,7 @@ services:
       - REDIS_PORT=6379
       - DELTALAKE_WAREHOUSE_DIR=s3a://cdm-lake/warehouse
       - SPARK_JOB_LOG_DIR=s3a://cdm-spark-job-logs/spark-job-logs
+      - SPARK_JOB_LOG_DIR_CATEGORY=worker-2
       - MINIO_URL=http://minio:9002
       - MINIO_LOG_USER_ACCESS_KEY=minio-log-access
       - MINIO_LOG_USER_SECRET_KEY=minio123
@@ -96,6 +99,7 @@ services:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - SPARK_JOB_LOG_DIR=s3a://cdm-spark-job-logs/spark-job-logs
+      - SPARK_JOB_LOG_DIR_CATEGORY=jupyter-user1
       - MINIO_URL=http://minio:9002
       - MINIO_LOG_USER_ACCESS_KEY=minio-readwrite
       - MINIO_LOG_USER_SECRET_KEY=minio123
