Adding spark-xml package to the cdm-spark-standalone

--- a/build.gradle
+++ b/build.gradle
@@ -18,12 +18,14 @@ def deltaSparkVersion = System.getenv('DELTA_SPARK_VER')
 def scalaVersion = System.getenv('SCALA_VER')
 def postgresVersion = System.getenv('POSTGRES_JDBC_VER')
 def sparkRedisVersion = System.getenv('SPARK_REDIS_VER')
+def sparkXmlVersion = System.getenv('SPARK_XML_VER')
 
 dependencies {
     implementation "org.apache.hadoop:hadoop-aws:$hadoopAwsVersion"
     implementation "io.delta:delta-spark_${scalaVersion}:$deltaSparkVersion"
     implementation "org.postgresql:postgresql:$postgresVersion"
     implementation "com.redislabs:spark-redis_${scalaVersion}:$sparkRedisVersion"
+    implementation "com.databricks:spark-xml_${scalaVersion}:$sparkXmlVersion"
 }
 
 task downloadDependencies(type: Copy) {
